# tinygpt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: smoke_corpus.txt  smoke_identity.jsonl
data/pretrain_checkpoints/smoke/checkpoint-20/: model.safetensors  scheduler.pt  trainer_state.json
data/sft_checkpoints/smoke/checkpoint-10/: config.json  model.safetensors  scheduler.pt  trainer_state.json
data/sft_checkpoints/smoke/checkpoint-20/: model.safetensors  scheduler.pt  trainer_state.json
data/tokenizer_smoke/: token_bytes.pt  tokenizer.json
runs/: distill_from_nanochat_d32.sh  from_scratch.sh  pretrain_with_nanochat_d32.sh  runcpu.sh  smoke.sh  speedrun.sh
scripts/: chat.py  convert.py  convert_tokenizer.py  distill.py  eval_tokenizer.py  evaluate.py  evaluate_model.py  evaluate_tokenizer.py  finetune.py  pretrain.py  rl.py  serve.py  train_tokenizer.py
src/tinygpt/: __init__.py  attention.py  checkpoint.py  config.py  dataloader.py  distillation.py  distributed.py  engine.py  execution.py  gpt.py  hf_trainer.py  inference.py  kvcache.py  metrics.py  model.py  optimizer.py  runtime.py  scheduler.py  tokenizer.py  train.py  trainer.py  utils.py
tasks/: arc.py  base.py  customjson.py  gsm8k.py  hellaswag.py  humaneval.py  mmlu.py  smoltalk.py  spellingbee.py
tests/: __init__.py  test_attention.py  test_checkpoint.py  test_dataloader.py  test_distillation.py  test_gpt.py  test_legacy_conversion.py  test_tokenizer.py  test_tokenizer_conversion.py
