[project]
name = "tinygpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "avolxn", email = "vladislav.eldashov@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.0",
    "kernels>=0.11.7",
    "tokenizers>=0.21.0",
    "datasets>=3.0.0",
    "wandb>=0.18.0",
    "regex>=2024.0.0",
    "tabulate>=0.9.0",
    "psutil>=5.9.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.30.0",
    "tiktoken>=0.9.0",
]

# Flash Attention (all optional, auto-detected at runtime, best available is used):
#   FA4 (Hopper/Blackwell SM90+):  pip install flash-attn-4
#   FA3 (Hopper SM90, pre-built):  pip install kernels  (already a hard dep; loads kernels-community/flash-attn3)
#   FA2 (Ampere SM80+):            pip install flash-attn --no-build-isolation
# On CPU/MPS only SDPA is used automatically.

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
